Bug 30818 - GDB + GDBserver doesn't set AVX512 registers properly
Summary: GDB + GDBserver doesn't set AVX512 registers properly
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: gdb (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-01 14:39 UTC by Simon Marchi
Modified: 2023-09-02 02:15 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Marchi 2023-09-01 14:39:21 UTC
On a machine with AVX512 support (AMD EPYC 9634), I see:

$ make check TESTS="gdb.arch/i386-avx512.exp" RUNTESTFLAGS="--target_board=native-gdbserver"
...
FAIL: gdb.arch/i386-avx512.exp: check contents of zmm_data[16] after writing ZMM regs
...

I can reproduce more simply with (after connecting to gdbserver):

(gdb) print $zmm16.v8_int64 
$1 = {0, 0, 0, 0, 0, 0, 0, 0}
(gdb) print $zmm16.v8_int64 = {11,22,33,44,55,66,77,88}
$2 = {11, 22, 33, 44, 55, 66, 77, 88}
(gdb) print $zmm16.v8_int64
$3 = {11, 22, 33, 44, 55, 66, 77, 88}
(gdb) step
5               ++x;
(gdb) print $zmm16.v8_int64
$4 = {11, 22, 77, 88, 0, 0, 0, 0}

It looks like writing to the local regcache in GDB worked fine, but the writeback to gdbserver didn't work fine.
Comment 1 Sourceware Commits 2023-09-02 02:14:58 UTC
The master branch has been updated by Simon Marchi <simark@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=41770089162edd23ea7ae33b7952585316accde5

commit 41770089162edd23ea7ae33b7952585316accde5
Author: Simon Marchi <simon.marchi@efficios.com>
Date:   Fri Sep 1 14:12:07 2023 -0400

    gdbserver: i387_cache_to_xsave: fix copy dest of zmm registers
    
    On a machine with AVX512 support (AMD EPYC 9634), I see these failures:
    
        $ make check TESTS="gdb.arch/i386-avx512.exp" RUNTESTFLAGS="--target_board=native-gdbserver"
        ...
        FAIL: gdb.arch/i386-avx512.exp: check contents of zmm_data[16] after writing ZMM regs
        FAIL: gdb.arch/i386-avx512.exp: check contents of zmm_data[17] after writing ZMM regs
        FAIL: gdb.arch/i386-avx512.exp: check contents of zmm_data[18] after writing ZMM regs
        ...
    
    The problem can be reduced to:
    
        (gdb) print $zmm16.v8_int64
        $1 = {0, 0, 0, 0, 0, 0, 0, 0}
        (gdb) print $zmm16.v8_int64 = {11,22,33,44,55,66,77,88}
        $2 = {11, 22, 33, 44, 55, 66, 77, 88}
        (gdb) print $zmm16.v8_int64
        $3 = {11, 22, 33, 44, 55, 66, 77, 88}
        (gdb) step
        5               ++x;
        (gdb) print $zmm16.v8_int64
        $4 = {11, 22, 77, 88, 0, 0, 0, 0}
    
    Writing to the local regcache in GDB works fine, but the writeback to
    gdbserver (which happens when resuming / stepping) doesn't work (the
    code being stepped doesn't touch AVX registers, so we don't expect the
    value of zmm16 to change when stepping).
    
    The problem is on the gdbserver side, the zmmh and ymmh portions of the
    zmm register are not memcpied at the right place in the xsave buffer.  Fix
    that.  Note now how the two modified memcpy calls match the memcmp calls
    just above them.
    
    With this patch, gdb.arch/i386-avx512.exp passes completely for me.
    
    Change-Id: I22c417e0f5e88d4bc635a0f08f8817a031c76433
    Reviewed-by: John Baldwin <jhb@FreeBSD.org>
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=30818
Comment 2 Simon Marchi 2023-09-02 02:15:41 UTC
Fixed.